--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -255,7 +255,7 @@ select {
 .header__inner .logo a .logo__img {
     width: clamp(344px, 24vw, 1000px);
     height: clamp(60px, 4vw, 400px);
-    background-image: url(/assets/svg/logo.svg);
+    background-image: url(./assets/svg/logo.svg);
     background-repeat: no-repeat;
     background-size: contain;
     cursor: pointer;
@@ -361,7 +361,7 @@ select {
 .main__inner .main__cont .main__img {
     width: 100%;
     height: 85.27vw;
-    background-image: url(/assets/img/sky.png);
+    background-image: url(./assets/img/sky.png);
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
@@ -374,7 +374,7 @@ select {
     top: -28vh;
     left: 50%;
     transform: translateX(-50%);
-    background-image: url(/assets/img/astronauta.webp);
+    background-image: url(./assets/img/astronauta.webp);
     background-repeat: no-repeat;
     background-size: cover;
 } */
@@ -408,7 +408,7 @@ select {
     position: relative;
     top: 74px;
     border-radius: 200px;
-    background-image: url(/assets/img/first1.png);
+    background-image: url(./assets/img/first1.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -419,7 +419,7 @@ select {
     position: relative;
     top: 74px;
     border-radius: 200px;
-    background-image: url(/assets/img/first2.png);
+    background-image: url(./assets/img/first2.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -430,7 +430,7 @@ select {
     position: relative;
     top: 74px;
     border-radius: 200px;
-    background-image: url(/assets/img/first3.png);
+    background-image: url(./assets/img/first3.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -441,7 +441,7 @@ select {
     position: relative;
     top: 74px;
     border-radius: 200px;
-    background-image: url(/assets/img/first4.png);
+    background-image: url(./assets/img/first4.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -479,7 +479,7 @@ select {
     width: 35vw;
     height: 44vw;
 
-    background-image: url(/assets/img/photo.jpg);
+    background-image: url(./assets/img/photo.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
