--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,7 +131,7 @@ input,
 select,
 table,
 textarea {
-    font-family: var(--fontEng), var(--fontKor), "Apple SD Gothic Neo", "Malgun Gothic", "맑은 고딕", helvetica, sans-serif;
+    font-family: var(--fontEng), var(--fontKor), "Apple SD Gothic Neo", "Malgun Gothic", "맑은 고딕", sans-serif;
 }
 
 /* // 링크 초기화 */
