--- a/assets/css/style4.css
+++ b/assets/css/style4.css
@@ -150,7 +150,9 @@ body {}
     background-position: center center;
     background-size: cover;
     margin: 0 1vw;
-    opacity: 1;
+    /* transform-origin: left;
+    animation: foldUnfold 5s cubic-bezier(.215, .61, .355, 1);
+    opacity: 0; */
 }
 
 .sec2__text li:nth-child(1) .img {
@@ -172,6 +174,7 @@ body {}
     background-image: url(../img/first4-min.png);
     top: -47vw;
 }
+
 
 /* section2 sec2__text2*/
 .sec2__text2 {
@@ -223,4 +226,14 @@ body {}
     line-height: 151%;
     margin-left: 2.3vw;
     font-family: var(--fontKor);
+}
+
+@keyframes foldUnfold {
+    0% {
+        transform: scaleX(0);
+    }
+
+    100% {
+        transform: scaleX(1);
+    }
 }
