--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -186,6 +186,60 @@
 /* SFProText */
 
 @font-face {
+    font-family: 'IropkeBatang';
+    font-weight: normal;
+    font-style: normal;
+    src: url('https://cdn.jsdelivr.net/gh/webfontworld/iropke/IropkeBatang.eot');
+    src: url('https://cdn.jsdelivr.net/gh/webfontworld/iropke/IropkeBatang.eot?#iefix') format('embedded-opentype'),
+        url('https://cdn.jsdelivr.net/gh/webfontworld/iropke/IropkeBatang.woff2') format('woff2'),
+        url('https://cdn.jsdelivr.net/gh/webfontworld/iropke/IropkeBatang.woff') format('woff'),
+        url('https://cdn.jsdelivr.net/gh/webfontworld/iropke/IropkeBatang.ttf') format("truetype");
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'NeoGeoTrial-ExtraLight';
+    font-weight: normal;
+    font-style: normal;
+    src: url('../fonts/NeoGeoTrial-ExtraLight.woff2') format('woff2');
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'NeoGeoTrial-Light';
+    font-weight: normal;
+    font-style: normal;
+    src: url('../fonts/NeoGeoTrial-Light.woff2') format('woff2');
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'AfricaTrial-Cliff';
+    font-weight: normal;
+    font-style: normal;
+    src: url('../fonts/AfricaTrial-Cliff.woff2') format('woff2');
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'AfricaTrial-Drylands';
+    font-weight: normal;
+    font-style: normal;
+    src: url('../fonts/AfricaTrial-Drylands.woff2') format('woff2');
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'AfricaTrial-Rainfall';
+    font-weight: normal;
+    font-style: normal;
+    src: url('../fonts/AfricaTrial-Rainfall.woff2') format('woff2');
+    font-display: swap;
+}
+
+/* port font */
+
+@font-face {
     font-family: 'Rosalina';
     src: url('../font/Rosalina-Regular.woff2') format('woff2'),
         url('../font/Rosalina-Regular.woff') format('woff');
@@ -359,7 +413,7 @@ input,
 select,
 table,
 textarea {
-    font-family: var(--fontEng), var(--fontKor), "Apple SD Gothic Neo", "Malgun Gothic", "맑은 고딕", helvetica, sans-serif;
+    font-family: var(--fontEng), var(--fontKor), NexonLv1GothicLow, -apple-system, BlinkMacSystemFont, "Malgun Gothic", "맑은 고딕", helvetica, sans-serif;
 }
 
 /* // 링크 초기화 */
