--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -201,7 +201,7 @@
     font-family: 'NeoGeoTrial-ExtraLight';
     font-weight: normal;
     font-style: normal;
-    src: url('../fonts/NeoGeoTrial-ExtraLight.woff2') format('woff2');
+    src: url('../font/NeoGeoTrial-ExtraLight.woff2') format('woff2');
     font-display: swap;
 }
 
@@ -209,9 +209,10 @@
     font-family: 'NeoGeoTrial-Light';
     font-weight: normal;
     font-style: normal;
-    src: url('../fonts/NeoGeoTrial-Light.woff2') format('woff2');
+    src: url('../font/NeoGeoTrial-Light.woff2') format('woff2');
     font-display: swap;
 }
+
 
 @font-face {
     font-family: 'AfricaTrial-Cliff';
@@ -324,6 +325,8 @@
     --fontLG2: "Banery", sans-serif;
     --fontLG3: "Rosalina", sans-serif;
     --fontLG4: "Starife Demo", sans-serif;
+    --fontNGE: 'NeoGeoTrial-ExtraLight';
+    --fontNGL: 'NeoGeoTrial-Light';
 
     --mainBg: #F5F7F8;
     --pointColor: #F4CE14;
