--- a/assets/css/style6.css
+++ b/assets/css/style6.css
@@ -285,6 +285,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     color: var(--white);
+    font-family: var(--fontKor);
     font-size: 25px;
     width: 70%;
 }
